--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -12,11 +12,71 @@
     color:#FD6E0A ;
 }
 
+.dark-2{
+    color: #474747 ;
+}
+
+.btn-primary{
+    background-color: #FD6E0A ;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+    padding: 18px 35px ;
+    border-radius: 5px;
+    border: none;
+
+}
+
 nav{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px 200px;
 }
 .nav-title{
     font-size: 45px;
     font-weight: bold;
     
+}
+nav ul{
+    display: flex;
+    align-items: center;
+
+}
+
+nav ul li{
+    list-style-type: none;
+    margin-right: 51px;
+   
+}
+nav li  a{
+    text-decoration: none;
+    font-size: 20px;
+}
+/* header  */
+.header{
+   background-image: url(../portfolio-resources-main/images/developer.png), url(../portfolio-resources-main/images/header_bg.png); 
+   background-repeat: no-repeat ;
+   background-position: top left, bottom right;
+}
+
+/* banner styles */
+.banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px 0 200px;
+}
+.banner-greetings{
+    font-size: 45px;
+    font-weight: 600px;
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: bold;
+}
+.banner-profile-pic{
+    width: 500px;
+}
+.banner-content{
+    max-width: 500px ;
 }
