--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -8,6 +8,11 @@
     "wdth" 100;
 }
 
+/* Shared style */
+.secondary-background {
+    background-color: #FFF8F3;
+}
+
 .text-primery{
     color:#FD6E0A ;
 }
@@ -53,6 +58,22 @@ nav li  a{
     text-decoration: none;
     font-size: 20px;
 }
+
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #757575;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+    
+}
+
+.text-center{
+    text-align: center;
+}
+
 /* header  */
 .header{
    background-image: url(../portfolio-resources-main/images/developer.png), url(../portfolio-resources-main/images/header_bg.png); 
@@ -79,4 +100,42 @@ nav li  a{
 }
 .banner-content{
     max-width: 500px ;
+}
+
+/* main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
+/* about styles */
+.about-me{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    
+}
+
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.item-discription{
+    font-weight: bold;
+}
+
+/* what i do styles */
+.skill-container{
+    display: flex;
+    gap: 25px;
+    
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
